--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+h1, h2, h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
